# Sprite-Extractor

./: README.md  pyproject.toml
src/: __init__.py  extractor.py
