[tool.poetry]
name = "sprite_extractor"
version = "0.1.0"
description = "A tool to extract individual sprites from a sprite sheet into PNG images."
authors = ["Ericson Willians <ericsonwillians@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.7.0"
rich = "^13.3.3"
numpy = "^1.24.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"

[tool.poetry.scripts]
sprite-extractor = "src.extractor:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"